--- a/Core_Portfolio/Views/Admin/NewSideBar.cshtml
+++ b/Core_Portfolio/Views/Admin/NewSideBar.cshtml
@@ -142,7 +142,7 @@
     </li>
 
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/icons/mdi.html">
+        <a class="nav-link" asp-controller="AdminMessage" asp-action="Index">
             <span class="menu-icon">
                 <i class="mdi mdi-email"></i>
             </span>
@@ -150,7 +150,7 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/icons/mdi.html">
+        <a class="nav-link" asp-controller="SubContact" asp-action="Index">
             <span class="menu-icon">
                 <i class="mdi mdi-phone"></i>
             </span>
