--- a/Core_Portfolio/Views/Home/Index.cshtml
+++ b/Core_Portfolio/Views/Home/Index.cshtml
@@ -1,8 +1,38 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿
+@{
+    Layout = null;
 }
+<!DOCTYPE html>
+<html data-bs-theme="light" lang="en">
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Untitled</title>
+    <link rel="stylesheet" href="/Bootstrap-Home-Page/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/Bootstrap-Home-Page/assets/css/bs-theme-overrides.css">
+    <link rel="stylesheet" href="/Bootstrap-Home-Page/assets/css/Hero-Clean-images.css">
+    <link rel="stylesheet" href="/Bootstrap-Home-Page/assets/css/Navbar-With-Button-icons.css">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-md bg-body py-3">
+        <div class="container"><button class="navbar-toggler" data-bs-toggle="collapse"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
+    </nav>
+    <div class="container py-4 py-xl-5">
+        <div class="row gy-4 gy-md-0">
+            <div class="col-md-6">
+                <div class="p-xl-5 m-xl-5"><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="/Bootstrap-Home-Page/assets/img/İmage.jpg" width="354" height="354"></div>
+            </div>
+            <div class="col-md-6 d-md-flex align-items-md-center">
+                <div style="max-width: 350px;">
+                    <h2 class="text-uppercase fw-bold">Portfolio Website Management Panel</h2>
+                    <p class="my-3">Please select the type of user you want to log in</p><a class="btn btn-primary btn-lg me-2" role="button" href="/AdminLogin/Index/">Admin</a><a class="btn btn-outline-primary btn-lg" role="button" href="/Writer/Login/Index/">Writer</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="/Bootstrap-Home-Page/assets/bootstrap/js/bootstrap.min.js"></script>
+</body>
+
+</html>
