--- a/Core_Portfolio/Views/Shared/_NewAdminLayout.cshtml
+++ b/Core_Portfolio/Views/Shared/_NewAdminLayout.cshtml
@@ -153,6 +153,7 @@
                 <div class="content-wrapper">  
                     @RenderBody()
                 </div>
+                @await RenderSectionAsync("Scripts")
                 <!-- content-wrapper ends -->
                 <!-- partial:../../partials/_footer.html -->
                 <footer class="footer">
